# TPsPatricio

./: .gitignore  README.md
Algebra1/TPsHaskell/: 28_alg1-tp.hs  clase8.hs
Algo2/: TAD SimCity  TADTaD.txt  simcity2.0.txt
Algo2/Práctica/: entregables_guía_2.aux  entregables_guía_2.dvi  entregables_guía_2.tex  practica-4.txt  practica5.txt  practica6.txt
Orga1/: circuitos_utiles.circ
Orga1/Taller 4 - Microarquitectura/: common.py
Orga1/Taller 4 - Microarquitectura-20200609/: microCode.mem  programa.asm  sumaGauss.asm  sumaGauss.mem  sumaGauss.txt  testMix.asm  testMix.mem  testMix.txt  testNeg.asm  testNeg.txt  testSig.asm  testSig.mem  testSig.txt
Orga1/Taller 5 - Interrupciones-20200630/: microCode.mem  microCode.ops  microOrgaSmallI.circ
Orga1/Taller 6/: Link al entorno online de desarrollo.txt
Orga1/taller-orga-1/: TallerLogica-Combinatorios.circ  diff.txt  verificador (copy).sh
Orga1/taller-orga-2/: TallerLogica-Secuenciales.circ
Orga2/: .gdb_history  guia1.txt  holamundo
Orga2/0104/: Ejercicios  ej1  ej2  ej2.c  ej3  ej3_asm.asm  ej3_c.c  ej4
Orga2/0301/: .gdb_history  ejec  lib.asm  lista.h  main  main.c
Orga2/0401/: ej1_asm.asm
Orga2/parcial1/: Makefile  ej1.c  ej2.c  ej3.c  ej4.c  lib.c  lib.h
Proba/TPsR/: practica6ej1.R  practica6ej4.R  (+3 more)
TPsC++/manejo de strings/template_alumnos/: CMakeLists.txt
TPsC++/manejo de strings/template_alumnos/src/: ejercicios.cpp
TPsC++/manejo de strings/template_alumnos/tests/: risasTEST.cpp  tests.cpp
TPsHaskell/: clase10.hs  collatz.hs  goldbach.hs
TPsR/: practica6ej2.R  practica6ej3.R
(+100 files in other folders)
